# Server/services/auth.service.js
@@ -1,15 +1,15 @@
 const {user_model} = require('../models/index');
 const {utils} = require('../libs')
 exports.signup = async (req) => {
-  const { first_name, last_name, username, email, password } = req.body;
+  const { email, password } = req.body;
   const exesting_user = await user_model.findOne({ email: email });
   if (exesting_user) {
     throw Object.assign(new Error("email_already_exists"), { code: 409 });
   }
   const user = new user_model({
-    first_name,
-    last_name,
-    username,
+    // first_name,
+    // last_name,
+    // username,
     email,
     password,
   });
